# kjaymiller.com

./: .frontmatter_check.yaml  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  a11y.py  az_build.sh  buildnotes.md  check_versions.py  conduit-event.md  conferences.json  convert_dates.py  create_tui_indexes.sql  error.txt  feed_entry.txt  guest_appearances.json  justfile  local_routes.py  love-from-filipino-culture.md  lunr_test.py  mysite.py  new_post.py  ollama_summarizer.py  package-lock.json  populate_db.py  pyproject.toml  readme.md  requirements-test.txt  requirements.in  requirements.txt  routes.py  schema.sql  search.html  searchlink  searchlink.bak  settings.json  tag_correction.py  tailwind.config.js  (+7 more)
.claude/agents/: textual-tui-debugger.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: a11y-test.yml  azure-static-web-apps-agreeable-mushroom-077a8d41e.yml  azure-static-web-apps-orange-ocean-0937ce910.yml  publish.yml
content/:  awkward-end-to-end-testing-with-playwright.md  2021-juneteenth.md  3d-print-for-keylight.md  Ask-a-Brit-returns.md  BambuLabs-isn't-apple.md  Creating Shortcuts from Text w Zachary Lineman.md  GTD Jedi on Bullet Journals.md  Historically Excluded.md  My PSF Voting Guide 2023.md  PIT-Reflection-2020-Aug-18.md  Playing with Popclip Snippets.md  Regina_Spektor_is_great.md  Using-your-postCreateCommand-to-Reduce-Complexity.md  VICE-rules.md  aab-4.md  about-the-psfs-cuts-to-grants.md  add-coc-2022-8-2.md  adding-social-cards-to-my-static-site.md  ai-because-im-lazy.md  akamai-partners-with-black-tech-pipeline.md  always-be-writing-things-down-somewhere.md  amazing-podcasting-content-creation-advise-from-professional-podcasters.md  announcement-31-tweets-ND-encouragment.md  announcing-conduit.md  announcing-transcriptor.md  anxiety-outside-my-community.md  ask-a-brit-buying-things-books.md  ask-a-brit-ep-1-apparently-the-uk-is-a-kinda-racist.md  ask-a-brit-i-don-t-know-who-that-is.md  ask-a-brit-i-watch-eurovision-i-mean-the-super-bowl-for-the-violence.md  ask-a-brit-maybe-we-d-have-bar-peanuts-if-people-washed-their-hands.md  ask-a-brit-mum-poppet-and-alumin-i-um-at-least-apple-says-them-right.md  ask-a-brit-they-have-whole-shops-devoted-to-fries.md  ask-a-brit-watch-your-mouth-in-the-public-square.md  ask-a-brit-who-fumbled-covid-worse.md  ask-a-brit-why-tipping-in-the-us-is-bad-but-you-should-still-do-it.md  ask-a-brit-why-was-the-president-suing-all-the-states.md  ask-a-brit-wtf-is-a-crumpet.md  awarded-the-psf-fellowship.md  azure-python-static-sites.md  (+367 more)
content-editor-tui/: .env.example  .gitignore  QUICKSTART.md  README.md  microblog-ui-updates.md  pyproject.toml  run.sh  tui-collection.md
content-editor-tui/content_editor/: __init__.py  db.py  main.py  ui.py
content/Drafts/: August Music Round Up-1.md  add-virtual-environment-to-oh-my-posh.md  creating-a-blog-post-from-bunch-pipx-and-sed.md  custom_command_for_lazyvim.md  less-drive-bys-more-drive-throughs.md  modern-solutions-are-not-proprietary.md  open-source-good-first-issues-are-not-always-easy-to-explain.md  open-source-good-first-issues-are-not-always-easy-to-explain.md.bak  pg17-in-clause-questions.md  running-tests-with-nox.md  terramaid.md  trying_a_lot_alacritty_tmux_lazynvim.md  trying_a_lot_alacritty_tmux_lazynvim.md.bak  two_weeks_on_engineering_team.md  what I love about my team.md
content/drafts/: love-from-filipino-culture.md
content/drafts/microblog/: 1-4-2026.md
content/microblog/: 19Feb2020.md  201806040000.md  202002191320.md  202002201109.md  202003021205.md  202003021625.md  202003051400.md  202005221459.md  202005252350.md  202005252358.md  202005280955.md  202005281126.md  202006211939.md  202007020946.md  202007061631.md  202007141506.md  202008070606.md  202008281614.md  202010222225.md  202010250824.md  202011082156.md  202011082310.md  202011082316.md  202011231550.md  202012301314.md  202103241447.md  202103241514.md  202103241522.md  202103250918.md  202104120848.md  202301121928S.md  202301161035S.md  202301161114S.md  20230116132702.md  20230116142521.md  202301230415.md  202301231920.md  20230124212057.md  20230126161238.md  20230216033255.md  (+138 more)
content/notes/: disable-markdown-linter-lazynvim.md  grow-hats.md  ingesting-lots-of-timeseries-data.md  manually-setting-the-slug-in-redner-engine.md  manually-setting-the-slug-in-render-engine.md  money-video-game-notes.md  pgvectorscale-added-to-pg.md  pip-install-from-git.md  print-list.md  quick-thoughts-on-render-engine-s-philosophy-circa-may-2025.md  render-engines-admonitions.md  setting-term-on-raspberry-pi.md  swapping-from-ssh-to-https-and-back-in-git.md
content/pages/: about.md  coffee-wishlist.md  contact.md  content_standards.md  newsletter.md  podcasts.md  privacy.md  projects.md  services.md  what-im.md
content/projects/: Bunch-alfred.md  pit.md
content/talks/: DevRel.md  wheel.md
data/: conferences.json  guest_appearances.json
design/: playwright_audit.py
src/: pyproject.toml
static/css/: microblog_archive.css  pygments.css  style.css  tailwind.css  twitch.css
templates/: 404.html  YouTube_embed.html  _archive.html  _guest_appearances.html  _head.html  _icons.html  _podcasts.html  _projects.html  _retired_podcasts.html  _webmentions.html  about.html  adding-social-cards-to-my-static-site.md  analytics.html  base.html  blog.html  blog_list.html  categories.html  conference-talks.html  conferences.html  conferences_map.html  contact.html  custom_index.html  custom_index_pagefind.html  custom_microblog.html  custom_microblog_entry.html  custom_microblog_post.html  extended-page.html  featured_post.html  flex_group.html  footer.html  footer_block_1.html  footer_block_2.html  full-jumbotron.html  github_disclaimer.html  guest_appearances.html  header.html  index.html  index_hero.html  lg-screen-jumbotron.html  links.html  (+24 more)
tools/: agents.py  no_tags.py  replace_edge_cdn.py
~/kjaymiller.com/content/microblog/: 20230216100904.md
