[project]
name = "kjaymiller.com"
description = "The personal website of K. Jay Miller"
url = "https://kjaymiller.com"
dependencies = [
    "render-engine>=2023.7.4a7",
    "render-engine-rss==2023.6.1a1",
    "render-engine-microblog==2023.6.1",
    "render-engine-youtube-embed==2023.7.2",
    "render-engine-aggregators",
    "render-engine-theme-kjaymiller==2023.7.1a4",
    "azure-storage-blob",
    "axe-playwright-python==0.1.4",
]

project.optional-dependences = [
    a11y = [
        "axe-playwright-python==0.1.4",
        ]

    upload = [
        "pillow",
        "azure-storage-blob",
    ]
]